--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -16,6 +16,9 @@ body {
   user-select: none;
 
 }
+ul {
+  list-style: none;
+}
 
 #main-section {
   flex: 1;
@@ -167,734 +170,15 @@ body {
 /* End Components */
 
 /* Start Nav */
-nav {
-  background-color: var(--Black-brown);
-
-  & .nav-logo img {
-    width: 270px;
-  }
-
-  @media (max-width: 767px) {
-    .nav-logo img {
-      width: 80%;
-    }
-  }
-
-  & .navbar-nav .nav-link {
-    color: var(--Beige);
-    font-weight: 600;
-    width: fit-content;
-
-    &.active,
-    &:hover {
-      color: var(--Pistachio);
-      background-color: hsl(32deg 40% 86% / 11%);
-      border-radius: 4px;
-    }
-  }
-
-  & .navbar-nav input.search {
-    width: 80%;
-    height: 40px;
-    border: none;
-    padding: 0 10px;
-    margin: 20px auto;
-    color: black;
-  }
-
-  & .btn {
-    background-color: var(--Beige);
-    color: var(--Black-brown);
-    font-weight: bold;
-
-    &:hover {
-      background-color: var(--Dark-petroleum);
-      color: white;
-    }
-  }
-
-  & .navbar-collapse>div.dropdown {
-    font-size: 1.5rem;
-    font-weight: 700;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    color: var(--Tan);
-    background: hsl(32deg 40% 86% / 11%);
-    padding: 2px;
-    border-radius: 50%;
-    cursor: pointer;
-
-    @media (max-width: 992px) {
-      margin-left: 20px;
-    }
-
-    &.active .profile-menu {
-      display: block;
-    }
-
-    & .profile-menu {
-      display: none;
-      position: absolute;
-      right: 0;
-      min-width: 250px;
-      font-size: 1.2rem;
-      background: var(--Black-brown);
-      padding: 1.5rem;
-      border-radius: 8px;
-      margin-top: 20px;
-
-      & .option {
-        & a {
-          display: block;
-          padding: 10px;
-          margin-top: 5px;
-          text-decoration: none;
-          color: var(--Beige);
-          border: 1px solid hsl(32deg 40% 86% / 16%);
-        }
-
-        & svg {
-          color: var(--Beige);
-          width: 24px;
-        }
-
-        &.logout {
-          & img {
-            width: 24px;
-          }
-        }
-      }
-    }
-  }
-
-  & .search-icon-div {
-    border-left: 1px solid var(--Beige);
-    cursor: pointer;
-
-    &>span {
-      pointer-events: none;
-      display: block;
-      width: 30px;
-      height: 30px;
-    }
-
-    & svg {
-      color: var(--Beige);
-      font-size: 20px;
-      padding: 4px;
-    }
-
-    &:hover>span {
-      background: hsl(32deg 40% 86% / 11%);
-      border-radius: 50%;
-    }
-
-    &:hover svg {
-      color: var(--Pistachio);
-    }
-
-    & input.searchArea {
-      width: 500px;
-      padding: 8px;
-      border-radius: 4px;
-      border: none;
-      position: absolute;
-      visibility: hidden;
-      top: 350%;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
-    & img {
-      background-color: var(--Beige);
-      padding: 3px;
-      border-radius: 50%;
-      cursor: pointer;
-
-      &:hover {
-        scale: .8;
-      }
-    }
-
-    &.active {
-
-
-      & input.searchArea {
-        visibility: visible;
-        border-radius: 4px;
-        top: 150%;
-        transition: .7s ease-out;
-        box-shadow: 10px 15px 6px var(--Black-brown);
-
-        &:focus {
-          transition: 1s ease-in;
-          box-shadow: -20px -20px 6px rgba(0, 0, 0, .5);
-          outline: none;
-        }
-      }
-    }
-  }
-
-  & .dashboard-link {
-    margin: 8px;
-
-    &>a {
-      text-decoration: none;
-      font-size: 1rem;
-      font-weight: 600;
-      width: fit-content;
-      color: var(--Tan);
-      background: hsl(32deg 40% 86% / 11%);
-      padding: 6px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    @media (max-width: 992px) {
-      margin-top: 20px;
-    }
-  }
-
-  & .navbar-toggler {
-    color: var(--Black-brown);
-    background-color: var(--Beige);
-    margin-inline-start: auto;
-  }
-}
-
-nav .container .shop-cart svg {
-  font-size: 30px;
-  color: rgb(186, 27, 27);
-  position: absolute;
-  top: 150%;
-  right: 3%;
-  cursor: pointer;
-
-  &:hover {
-    color: rgb(133, 28, 28);
-  }
-}
-
-
-@media (max-width: 992px) {
-  nav .navbar-collapse>div.dropdown {
-    & .profile-menu {
-      left: 0;
-      margin-top: 8px;
-    }
-  }
-}
-
 /* End Nav */
-
 /* Start Landing */
-.landing {
-  position: relative;
-  height: calc(100vh - 91px);
-  /*91px is the height of Nav*/
-  background-color: var(--Beige);
-
-  & h3 {
-    color: var(--Black-brown);
-    font-weight: bold;
-
-    & span {
-      color: var(--Dark-petroleum);
-    }
-  }
-
-  & h3::after {
-    content: '';
-    display: block;
-    position: absolute;
-    height: 1px;
-    width: 30%;
-    background-color: var(--Black-brown);
-    margin-top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-  & p {
-    font-size: 18px;
-    font-style: italic;
-    font-weight: 600;
-    line-height: 2;
-    color: #444;
-  }
-}
-
-.btn {
-  background-color: var(--Black-brown);
-  color: var(--Beige);
-  font-size: 18px;
-  font-weight: bold;
-
-  &:hover {
-    background-color: var(--Dark-petroleum);
-    color: white;
-  }
-}
-
-
-
 /* End Landing */
-
-
 /* Start authors  */
-.authors {
-  position: relative;
-  height: 850px;
-  width: 100%;
-  background-color: var(--Pistachio);
-  padding-top: var(--section-padding);
-  padding-bottom: var(--section-padding);
-
-  & .heading h1 {
-    color: var(--Black-brown);
-    letter-spacing: 4px;
-    margin-bottom: 50px;
-    text-transform: uppercase;
-
-    &::before {
-      background-color: var(--Pistachio);
-    }
-  }
-
-  & .slider {
-    position: relative;
-    height: 500px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-    padding-top: 0;
-
-  }
-
-  & .slider .section {
-    width: 100%;
-    position: absolute;
-    opacity: 0;
-    transition: opacity 1s ease;
-
-    &.active {
-      opacity: 1;
-      z-index: 2;
-    }
-  }
-
-  & .slider>.section>span {
-    font: 30px bold;
-    display: block;
-    color: white;
-    text-align: center;
-    background-color: var(--Black-brown);
-    padding: 5px 0;
-    margin-bottom: 10px;
-  }
-
-  & .slider>.engSlide>span {
-    letter-spacing: 4px;
-  }
-
-  & .slider>.frSlide>span {
-    letter-spacing: 4px;
-  }
-
-  & .slider .slide {
-    position: relative;
-    overflow: hidden;
-  }
-
-  & .slider .slide img {
-    width: 100%;
-  }
-
-  & .container .slider .text {
-    text-align: center;
-    background-color: var(--Beige);
-
-    & h5 {
-      padding: 16px 0;
-      background-color: var(--Tan);
-      font-weight: 700;
-      text-transform: capitalize;
-    }
-
-    & p {
-      margin: 5px 15px;
-      color: #444;
-      font-weight: 500;
-      padding-bottom: 8px;
-    }
-  }
-
-  @media (max-width: 992px) {
-    .slider {
-      height: 660px;
-    }
-
-    .slider .slide img {
-      height: 130px;
-    }
-
-    .container .slider .text {
-      font-size: 14px;
-
-      & h5 {
-        padding: 10px 0;
-      }
-    }
-  }
-
-  @media (max-width: 767px) {
-    .slider {
-      height: 750px;
-      position: relative;
-    }
-
-    .heading h1 {
-      margin-top: -25px;
-      margin-bottom: 30px;
-
-      &::after {
-        margin-top: 8px;
-        width: 26%;
-      }
-
-      &::before {
-        margin-top: 30px;
-        font-size: 25px;
-      }
-    }
-
-    .slider .slide img {
-      height: 85px;
-    }
-
-    .container .slider .text {
-      font-size: 13px;
-
-      & h5 {
-        padding: 10px 0;
-      }
-    }
-  }
-}
-
-.authors .indicators {
-  bottom: 15%;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  /* float: left; */
-}
-
-.authors .indicators ul {
-  list-style: none;
-  margin: 0;
-  text-align: center;
-}
-
-.authors .indicators ul li {
-  display: inline-block;
-  color: transparent;
-  user-select: none;
-
-  &::after {
-    content: '';
-    display: block;
-    margin: 0 10px 0 0;
-    width: 200px;
-    height: 6px;
-    background-color: var(--Black-brown);
-    opacity: .3;
-    cursor: pointer;
-  }
-}
-
-.authors .indicators ul li.active::after {
-  opacity: 1;
-}
-
 /* End authors  */
-
-
-
 /* Start Video */
-.video {
-  position: relative;
-  padding-top: var(--section-padding);
-  padding-bottom: var(--section-padding);
-
-  &:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0 0 0 / 60%);
-  }
-
-  & video {
-    width: 100%;
-  }
-
-  & .text {
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: hsl(215deg 80% 22% / 50%);
-    color: var(--Beige);
-    padding: 50px;
-
-    & h3 {
-      margin: -20px auto 50px;
-      font-size: 40px;
-      font-weight: 700;
-    }
-
-    & p {
-      font-size: 18px;
-      font-weight: 500;
-      font-style: italic;
-      opacity: .7;
-    }
-  }
-}
-
-@media (max-width: 767px) {
-  .video .text {
-    padding: 15px;
-
-    & h3 {
-      font-size: 24px;
-      margin: 20px auto;
-    }
-
-    & p {
-      font-size: 12px;
-    }
-  }
-
-  .video .btn {
-    margin-top: 0 !important;
-    padding: 10px 20px !important;
-  }
-}
-
-
-
-
 /* End Video */
-
-
-
 /* Start Books */
-.books {
-  position: relative;
-  background-color: var(--Beige);
-  padding-top: var(--section-padding);
-  padding-bottom: var(--section-padding);
-
-  .container {
-    position: relative;
-  }
-
-  & .heading h1 {
-    color: var(--Black-brown);
-    letter-spacing: 4px;
-    margin-bottom: 50px;
-    text-transform: uppercase;
-
-    &::before {
-      background-color: var(--Beige);
-    }
-  }
-
-  & .container h2 {
-    background-color: var(--Black-brown);
-    color: white;
-    padding: 10px 0;
-  }
-
-  & .engSlider,
-  .arSlider {
-    position: relative;
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: calc((100% / 6) - 13px);
-    gap: 16px;
-    background: linear-gradient(to left top, var(--Tan), var(--Beige), var(--Tan));
-    overflow-x: auto;
-    height: 380px;
-    box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.16), 6px 6px 6px rgba(0, 0, 0, 0.23);
-    cursor: pointer;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    scrollbar-width: 0;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
-
-    &.dragging {
-      scroll-snap-type: none;
-      scroll-behavior: auto;
-    }
-  }
-
-  .engSlider.no-transition,
-  .arSlider.no-transition {
-    scroll-behavior: auto;
-  }
-
-  & ul li {
-    margin-top: 15px;
-    list-style: none;
-    height: 350px;
-    scroll-snap-align: start;
-    border-radius: 8px;
-    background: var(--Tan);
-    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.16), 3px 3px 6px rgba(0, 0, 0, 0.23);
-
-    &:hover {
-      transform: scale(1.05);
-      transition: 0.3s;
-    }
-  }
-
-  .engSlider .box,
-  .arSlider .box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 100%;
-  }
-
-  & img {
-    width: 100%;
-    transition: 1s;
-  }
-
-  & .box .book-rating {
-    width: fit-content;
-    margin: auto;
-    text-align: center;
-
-    & span svg {
-      color: gold;
-      font-size: 16px;
-
-    }
-
-    & span:last-child {
-      color: #333;
-      font-size: 14px;
-      font-weight: bold;
-    }
-  }
-
-  & a {
-    text-decoration: none;
-    color: var(--Black-brown);
-
-    &:hover {
-      color: var(--Dark-petroleum);
-    }
-  }
-
-  & h5 {
-    text-align: center;
-    font-weight: bold;
-    text-transform: capitalize;
-    margin: 5px 0 0;
-  }
-
-  & p {
-    width: fit-content;
-    margin: 0 auto;
-    font-weight: bold;
-    text-transform: capitalize;
-
-    & span {
-      padding-left: 10px;
-    }
-
-  }
-
-  .engSlider.dragging .box,
-  .arSlider.dragging .box {
-    cursor: grab;
-    user-select: none;
-  }
-
-  .container>div {
-    position: relative;
-  }
-
-  .container>div>span {
-    height: 50px;
-    width: 50px;
-    background-color: var(--Black-brown);
-    opacity: .4;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
-
-    &:first-of-type {
-      left: -22px;
-    }
-
-    &:last-of-type {
-      right: -22px;
-    }
-
-    &:hover {
-      opacity: .8;
-    }
-  }
-
-  & .container span svg {
-    text-align: center;
-    font-size: 15px;
-    color: white;
-  }
-}
-
-@media (max-width: 992px) {
-
-  .books .container .engSlider,
-  .books .container .arSlider {
-    grid-auto-columns: calc((100% /3) - 12px);
-  }
-}
-
-@media (max-width: 767px) {
-
-  .books .container .engSlider,
-  .books .container .arSlider {
-    grid-auto-columns: calc((100% /2) - 9px);
-  }
-
-
-  .books .container>div>span {
-    display: none;
-  }
-}
-
-
 /* End Books */
-
-
-
 /* Start InfoScreen */
 
 
