--- a/frontend/src/Css/authors.css
+++ b/frontend/src/Css/authors.css
@@ -1,7 +1,7 @@
 
 .authors {
   position: relative;
-  height: 850px;
+  height: 860px;
   width: 100%;
   background-color: var(--Pistachio);
   padding-top: var(--section-padding);
@@ -20,25 +20,14 @@
 
   & .slider {
     position: relative;
-    height: 500px;
+    height: 560px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     padding-top: 0;
 
   }
 
-  & .slider .section {
-    width: 100%;
-    position: absolute;
-    opacity: 0;
-    transition: opacity 1s ease;
 
-    &.active {
-      opacity: 1;
-      z-index: 2;
-    }
-  }
-
-  & .slider>.section>span {
+  & #title-heading {
     font: 30px bold;
     display: block;
     color: white;
@@ -48,23 +37,20 @@
     margin-bottom: 10px;
   }
 
-  & .slider>.engSlide>span {
+  & #title-heading.engSlide {
     letter-spacing: 4px;
   }
 
-  & .slider>.frSlide>span {
+  & #title-heading.frSlide {
     letter-spacing: 4px;
   }
 
-  & .slider .slide {
-    position: relative;
-    overflow: hidden;
-  }
-
-  & .slider .slide img {
+  & .container .slider img {
     width: 100%;
-    height: 250px;
+    height: 245px;
   }
+
+  
 
   & .container .slider .text {
     text-align: center;
@@ -86,11 +72,11 @@
   }
 
   @media (max-width: 992px) {
-    .slider {
-      height: 660px;
+    #slider {
+      height: 700px;
     }
 
-    .slider .slide img {
+    .container .slider img {
       height: 130px;
     }
 
@@ -104,9 +90,8 @@
   }
 
   @media (max-width: 767px) {
-    .slider {
-      height: 750px;
-      position: relative;
+    #slider {
+      height: 760px;
     }
 
     .heading h1 {
@@ -124,7 +109,7 @@
       }
     }
 
-    .slider .slide img {
+    .container .slider img {
       height: 85px;
     }
 
@@ -132,28 +117,29 @@
       font-size: 13px;
 
       & h5 {
+        font-size: 16px;
         padding: 10px 0;
       }
     }
   }
 }
 
-.authors .indicators {
+/* .authors .indicators {
   bottom: 15%;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  /* float: left; */
-}
+  float: left;
+} */
 
-.authors .indicators ul {
+/* .authors .indicators ul {
   list-style: none;
   margin: 0;
   text-align: center;
-}
+} */
 
-.authors .indicators ul li {
+/* .authors .indicators ul li {
   display: inline-block;
   color: transparent;
   user-select: none;
@@ -172,14 +158,6 @@
 
 .authors .indicators ul li.active::after {
   opacity: 1;
-}
+} */
 
-#title-heading {
-  font: 30px bold;
-    display: block;
-    color: white;
-    text-align: center;
-    background-color: var(--Black-brown);
-    padding: 5px 0;
-    margin-bottom: 10px;
-}
+
