--- a/frontend/src/Css/books.css
+++ b/frontend/src/Css/books.css
@@ -27,7 +27,7 @@
 
   & .engSlider,
   .arSlider {
-    position: relative;
+    /* position: relative;
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: calc((100% / 6) - 13px);
@@ -39,7 +39,7 @@
     cursor: pointer;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
-    scrollbar-width: 0;
+    scrollbar-width: 0; */
 
     &::-webkit-scrollbar {
       display: none;
@@ -56,19 +56,19 @@
     scroll-behavior: auto;
   }
 
-  & ul li {
+  & #swiper-slide {
     margin-top: 15px;
     list-style: none;
-    height: 350px;
+    height: 420px;
     scroll-snap-align: start;
     border-radius: 8px;
     background: var(--Tan);
-    box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.16), 3px 3px 6px rgba(0, 0, 0, 0.23);
+    /* box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.16), 3px 3px 6px rgba(0, 0, 0, 0.23); */
 
-    &:hover {
+    /* &:hover {
       transform: scale(1.05);
       transition: 0.3s;
-    }
+    } */
   }
 
   .engSlider .box,
@@ -140,7 +140,26 @@
     position: relative;
   }
 
-  .container>div>span {
+  .slider-controller {
+    display: flex;
+    justify-content: space-around;
+    font-size: 2rem;
+    color: #222224;
+
+    & .swiper-prev-btn,
+    .swiper-next-btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: var(--Tan);
+      width: 3.5rem;
+      height: 3.5rem;
+      border-radius: 50%;
+      filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+    }
+  }
+
+  /* .container>div>span {
     height: 50px;
     width: 50px;
     background-color: var(--Black-brown);
@@ -171,7 +190,7 @@
     text-align: center;
     font-size: 15px;
     color: white;
-  }
+  } */
 }
 
 @media (max-width: 992px) {
