--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -16,6 +16,8 @@ body {
   user-select: none;
 
 }
+
+
 ul {
   list-style: none;
 }
@@ -90,26 +92,35 @@ ul {
     left: 50%;
     transform: translateX(-50%);
     background-color: var(--Black-brown);
-    margin-top: 10px;
+    margin-top: 13px;
   }
 
-  &::before {
+  /* &::before {
     content: '\e0bb';
     display: block;
     position: absolute;
     font-size: 35px;
-    font-family: "Font Awesome 5 Free";
+    font-family: 'Font Awesome Kit';
     font-weight: 900;
-    display: block;
     color: var(--Black-brown);
     left: 50%;
     transform: translateX(-50%);
     margin-top: 40px;
     padding: 0 8px;
     z-index: 1;
-  }
+  } */
 }
-
+.book-svg{
+  position: absolute;
+  font-size: 35px;
+  font-weight: 900;
+  color: var(--Black-brown);
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 45px;
+  padding: 0 8px;
+  z-index: 1;
+}
 @media (max-width: 767px) {
   .heading h1 {
     margin-top: -25px;
@@ -120,14 +131,14 @@ ul {
       width: 26%;
     }
 
-    &::before {
+    & .book-svg {
       margin-top: 30px;
       font-size: 25px;
     }
   }
 }
 
-.control {
+/* .control {
   z-index: 1000;
   position: absolute;
   top: 50%;
@@ -164,7 +175,7 @@ ul {
 .control>span.prev.disabled,
 .control>span.next.disabled {
   opacity: 0;
-}
+} */
 
 
 /* End Components */
