--- a/frontend/src/Css/books.css
+++ b/frontend/src/Css/books.css
@@ -14,7 +14,7 @@
     margin-bottom: 50px;
     text-transform: uppercase;
 
-    &::before {
+    & .book-svg {
       background-color: var(--Beige);
     }
   }
@@ -144,18 +144,24 @@
     display: flex;
     justify-content: space-around;
     font-size: 2rem;
-    color: #222224;
+    color: wheat;
 
     & .swiper-prev-btn,
     .swiper-next-btn {
       display: flex;
       justify-content: center;
       align-items: center;
-      background: var(--Tan);
+      background: var(--Black-brown);
+      opacity: .8;
       width: 3.5rem;
       height: 3.5rem;
+      margin-top: 20px;
       border-radius: 50%;
+      cursor: pointer;
       filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+      &:hover {
+        opacity: 1;
+      }
     }
   }
 
